# sm64cpp

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  Makefile  compile_commands.json  extract_assets.py
.github/workflows/: ci.yml
include/: macros.h  make_const_nonconst.h
levels/: scripts.c
src/audio/: data.c  heap.c  heap.h  internal.h  load.c  load.h  load_sh.c  playback.c  seqplayer.c  seqplayer.h
src/engine/: behavior_script.c  graph_node.c  math_util.cpp  math_util.h  surface_load.c
src/game/: behavior_actions.h  camera.c  camera.h  envfx_bubbles.c  ingame_menu.c  level_geo.c  level_geo.h  main.c  main.h  mario.c  mario_actions_cutscene.h  mario_misc.h  memory.c  memory.h  moving_texture.c  moving_texture.h  object_helpers.c  object_helpers.h  rendering_graph_node.c  rumble_init.c  save_file.c  settings.cpp  settings.h  settings.hpp  skybox.c  sound_init.c
src/game/behaviors/: bowser_puzzle_piece.inc.c  corkbox.inc.c
src/goddard/: debug_utils.c  draw_objects.c  dynlist_proc.c  objects.c  old_menu.c  particles.c  renderer.c  shape_helper.c
src/menu/: file_select.c  file_select.h  star_select.c  star_select.h
src/pc/: colors.cpp  colors.hpp  configfile.c  configfile.cpp  configfile.hpp  pc_main.c  pc_main.cpp  ultra_reimplementation.c  ultra_reimplementation.cpp
src/pc/controller/: controller_api.h  controller_emscripten_keyboard.c  controller_entry_point.cpp  controller_keyboard.c  controller_keyboard.cpp  controller_keyboard.hpp
src/pc/gfx/: gfx_opengl.c  gfx_pc.c  gfx_sdl2.c
tests/: stubs_settings.cpp  test_colors.cpp  test_configfile.cpp  test_controller_entry.cpp  test_keyboard.cpp  test_math_util.cpp  test_math_util_stubs.cpp  test_ultra.cpp
tools/: Makefile  generate_cake_inc.py  generate_inc_files.py
